--- a/src/components/App/style.postcss
+++ b/src/components/App/style.postcss
@@ -4,7 +4,7 @@
         flex: 1;
         background: #282c34;
         box-shadow: 0 0 7px #00000066;
-        white-space: pre-wrap;
+        white-space: pre-line;
     }
 }
 
