--- a/src/components/InstallSwitch/style.postcss
+++ b/src/components/InstallSwitch/style.postcss
@@ -17,8 +17,8 @@
     &:before {
         content: "Install";
         font-weight: bold;
-        vertical-align: sub;
-        margin-left: 5px;
+        vertical-align: middle;
+        margin-left: 1rem;
         color: white;
         text-shadow: 0 0 3px #00000099;
     }
