--- a/src/components/App/style.postcss
+++ b/src/components/App/style.postcss
@@ -20,9 +20,23 @@
     }
 }
 
+.icon {
+    width: 4em;
+    margin: 1em;
+}
+
+.title {
+    font-size: 220%;
+    vertical-align: middle;
+    color: #baff91;
+}
+
+.controls {
+    overflow: auto;
+}
+
 .form {
     padding: 1em;
-    overflow: auto;
     div:global(.checkbox) {
         &:hover {
             input {
@@ -62,7 +76,4 @@
             user-select: none;
         }
     }
-}
-
-.code {
 }
