Changed logo design

--- a/src/components/App/style.postcss
+++ b/src/components/App/style.postcss
@@ -28,7 +28,8 @@
 .title {
     font-size: 220%;
     vertical-align: middle;
-    color: #baff91;
+    text-shadow: 0 0 5px #00ff5a;
+    color: #fff;
 }
 
 .controls {
