--- a/src/variables.scss
+++ b/src/variables.scss
@@ -3,13 +3,15 @@
 $body-bg: #2C2F33;
 $body-color: #DDD;
 
-$info: #348e64; // "Add" button color
+$info: #70c370; // "Add" button color
 $danger: #d66464; // "Remove" button color
 $success: #70c370; // "Remove" button color
 
 $font-family-sans-serif: Ubuntu, Roboto, Arial, sans-serif;
 $font-family-monospace: 'Source Code Pro', 'Ubuntu Mono', 'Courier New', monospace;
 
-$form-group-margin-bottom: 0em;
+$form-group-margin-bottom: 1em;
+$input-btn-padding-y: 0.1rem !default;
+$input-btn-padding-x: 0.5rem !default;
 
 @import "~bootstrap/scss/variables";
