Added lazyload to Google Fonts stylesheet references

--- a/config/html.ejs
+++ b/config/html.ejs
@@ -45,7 +45,7 @@
     <% } %>
 
     <% if (htmlWebpackPlugin.options.appDescription.googleFonts) { htmlWebpackPlugin.options.appDescription.googleFonts.forEach(function(font) { %>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=<%= font %>">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=<%= font %>" lazyload>
     <% }) } %>
 
 </head>
