--- a/config/html.ejs
+++ b/config/html.ejs
@@ -32,14 +32,14 @@
     <% if (app.openGraph) { %>
     <meta property="og:type" content="website" />
     <meta property="og:title" content="<%= app.openGraph.title || app.title || app.id %>" />
+    <meta property="og:description" content="<%= app.openGraph.description || app.description %>" />
+    <meta property="og:locale" content="<%= app.openGraph.locale || app.locale %>" />
     <meta property="og:url" content="<%= app.openGraph.url %>" />
     <meta property="og:image" content="<%= app.openGraph.image || app.image %>" />
     <meta property="og:image:width" content="<%= app.openGraph.imageWidth || app.imageWidth %>" />
     <meta property="og:image:height" content="<%= app.openGraph.imageHeight || app.imageHeight %>" />
-    <meta property="og:locale" content="<%= app.openGraph.locale || app.locale %>" />
-    <meta property="og:description" content="<%= app.openGraph.description || app.description %>" />
-    <meta property="og:updated_time" content="<%= app.openGraphFacebook.updatedTime || Math.ceil(Number(new Date) / 1000) %>" />
-    <meta property="og:image:alt" content="<%= app.openGraphFacebook.imageAlt || app.imageAlt || ((app.openGraph.title || app.title || app.icon) + ' icon') %>" />
+    <meta property="og:image:alt" content="<%= app.openGraphFacebook.imageAlt || app.imageAlt || ((app.openGraph.title || app.title || app.id) + ' icon') %>" />
+    <meta property="og:updated_time" content="<%= app.openGraphFacebook.updatedTime || app.updatedTime %>" />
     <% } %>
 
     <% if (app.twitterCard) { %>
