Created custom string array widget

--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -12,7 +12,7 @@
         margin-bottom: 0;
         background: #282c34;
         box-shadow: 0 0 7px #00000066;
-        white-space: pre-line;
+        white-space: pre-wrap;
     }
     ::-webkit-scrollbar {
         background: transparent;
