--- a/src/variables.global.scss
+++ b/src/variables.global.scss
@@ -7,6 +7,8 @@ $info: #70c370; // "Add" button color
 $danger: #d66464; // "Remove" button color
 $success: #70c370; // "Remove" button color
 
+$primary: $info;
+
 $font-family-sans-serif: Ubuntu, Roboto, Arial, sans-serif;
 $font-family-monospace: 'Source Code Pro', 'Ubuntu Mono', 'Courier New', monospace;
 
